--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   }
 }
